"practice 运行，修正文件传输问题"