@@ -13,49 +13,88 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 
 @Service
 public class runServiceImpl implements runService {
 
     @Override
-    public String[] run(MultipartFile userFile, String language, MultipartFile[] inputFiles) throws Exception {
-//        MultipartFile[] inputFiles = cacheService.testGetInputFile(problemName); TODO
-        // 生成uuid加一串随机字符加时间戳
-        String dirName = System.currentTimeMillis() + UUID.randomUUID().toString() + RandomStringUtils.randomAlphabetic(10);
-        // 在当前目录的父目录的父目录的父目录的localRun文件夹下创建一个文件夹，文件夹名为problemName
+    public List<byte[]> run(byte[] userFile, String language, List<byte[]> inputFiles) throws Exception {
+        // 创建临时目录
+        String dirName = createTempDirectory();
         String path = "/app/localRun" + "/" + dirName;
-        // 创建文件夹
         Path.get(path).toFile().mkdirs();
+
+        // 保存用户文件和输入文件
+        File userFilePath = saveUserFile(path, userFile, language);
+        File[] inputFilePaths = saveInputFiles(path, inputFiles);
+
+        // 创建输出文件和错误文件
+        File[] outputFilePaths = createOutputFiles(path, inputFiles.size());
+        File errFile = createErrorFile(path);
+
+        // 复制运行脚本并编译
+        File runFilePath = copyAndCompileRunScript(path);
+
+        // 执行程序
+        executeProgram(runFilePath, userFilePath, outputFilePaths);
+
+        // 读取结果
+        List<byte[]> result = readResults(outputFilePaths, errFile);
+
+        // 删除临时目录
+        deleteDirectory(path);
+
+        return result;
+    }
+
+    private String createTempDirectory() {
+        // 生成uuid加一串随机字符加时间戳
+        return System.currentTimeMillis() + UUID.randomUUID().toString() + RandomStringUtils.randomAlphabetic(10);
+    }
+
+    private File saveUserFile(String path, byte[] userFile, String language) throws IOException {
         // 将userFile保存到path目录下
         File userFilePath = new File(path + "/test." + language);
-        userFile.transferTo(userFilePath);
-        // 将inputFiles保存到path目录下
-        if (inputFiles != null) {
-            for (int i = 0; i < inputFiles.length; i++) {
-                File inputFilePath = new File(path + "/in" + (i + 1) + ".txt");
-                inputFiles[i].transferTo(inputFilePath);
-            }
-        } else throw new Exception("No input files found for problem");
-        // 在该目录下新建out.txt文件
-//        File outputFilePath = new File(path + "\\out.txt");
-        File[] files = new File[inputFiles.length];
-        for (int i = 0; i < inputFiles.length; i++) {
+        Files.write(userFilePath.toPath(), userFile);
+        return userFilePath;
+    }
+
+    private File[] saveInputFiles(String path, List<byte[]> inputFiles) throws IOException {
+        if (inputFiles == null) {
+            throw new IllegalArgumentException("No input files found for problem");
+        }
+        File[] inputFilePaths = new File[inputFiles.size()];
+        for (int i = 0; i < inputFiles.size(); i++) {
+            byte[] inputFile = inputFiles.get(i);
+            File inputFilePath = new File(path + "/in" + (i + 1) + ".txt");
+            Files.write(inputFilePath.toPath(), inputFile);
+            inputFilePaths[i] = inputFilePath;
+        }
+        return inputFilePaths;
+    }
+
+    private File[] createOutputFiles(String path, int count) throws IOException {
+        File[] outputFilePaths = new File[count];
+        for (int i = 0; i < count; i++) {
             File outputFilePath = new File(path + "/out" + (i + 1) + ".txt");
             if (!outputFilePath.createNewFile()) {
-                throw new Exception("Failed to create output file at: " + outputFilePath.getAbsolutePath());
+                throw new IOException("Failed to create output file at: " + outputFilePath.getAbsolutePath());
             }
-            files[i] = outputFilePath;
+            outputFilePaths[i] = outputFilePath;
         }
+        return outputFilePaths;
+    }
 
+    private File createErrorFile(String path) throws IOException {
         File errFile = new File(path + "/err.txt");
         if (!errFile.createNewFile()) {
-            throw new Exception("Failed to create error file at: " + errFile.getAbsolutePath());
+            throw new IOException("Failed to create error file at: " + errFile.getAbsolutePath());
         }
+        return errFile;
+    }
 
+    private File copyAndCompileRunScript(String path) throws IOException, InterruptedException {
         String runPath = "/app/run.c";
         File runFilePath = new File(path + "/run.c");
         if (!runFilePath.getParentFile().exists()) {
@@ -71,52 +110,57 @@ public class runServiceImpl implements runService {
         boolean compiled = compileProcess.waitFor(10, java.util.concurrent.TimeUnit.SECONDS);
         if (!compiled) {
             compileProcess.destroy();
-            throw new Exception("Compilation timed out after 10 seconds.");
+            throw new IOException("Compilation timed out after 10 seconds.");
         }
+        return runFilePath;
+    }
 
-        // 执行编译后的可执行文件，先修改权限chmod +x /app/run
-        ProcessBuilder chmodProcessBuilder = new ProcessBuilder("chmod", "+x", path + "/run");
-        chmodProcessBuilder.directory(new File(path));
+    private void executeProgram(File runFilePath, File userFilePath, File[] outputFilePaths) throws IOException, InterruptedException {
+        // 修改权限
+        ProcessBuilder chmodProcessBuilder = new ProcessBuilder("chmod", "+x", runFilePath.getParent() + "/run");
+        chmodProcessBuilder.directory(runFilePath.getParentFile());
         Process chmodProcess = chmodProcessBuilder.start();
         // 等待chmod完成, 或者超时
         boolean chmodFinished = chmodProcess.waitFor(10, java.util.concurrent.TimeUnit.SECONDS);
         if (!chmodFinished) {
             chmodProcess.destroy();
-            throw new Exception("chmod timed out after 10 seconds.");
+            throw new IOException("chmod timed out after 10 seconds.");
         }
 
-        ProcessBuilder processBuilder = new ProcessBuilder(path + "/run", userFilePath.getAbsolutePath(), files[0].getAbsolutePath());
-        processBuilder.directory(new File(path));
+        // 执行程序
+        ProcessBuilder processBuilder = new ProcessBuilder(runFilePath.getParent() + "/run", userFilePath.getAbsolutePath(), outputFilePaths[0].getAbsolutePath());
+        processBuilder.directory(runFilePath.getParentFile());
         Process process = processBuilder.start();
         // 等待执行完成, 或者超时
         boolean finished = process.waitFor(10, java.util.concurrent.TimeUnit.SECONDS);
         if (!finished) {
             process.destroy();
-            throw new Exception("Execution timed out after 10 seconds.");
+            throw new IOException("Execution timed out after 10 seconds.");
         }
+    }
 
-        String[] result = new String[inputFiles.length + 1];
+    private List<byte[]> readResults(File[] outputFilePaths, File errFile) throws IOException {
+        List<byte[]> result = new ArrayList<>();
 
         // 从err.txt中读取错误信息
-        result[inputFiles.length] = Files.readString(errFile.toPath(), StandardCharsets.UTF_8);
+        byte[] errContent = Files.readAllBytes(errFile.toPath());
+        result.add(errContent);
 
-        // 从所有out(i + 1).txt中读取字符串，返回这个字符串数组
-        for (int i = 0; i < inputFiles.length; i++) {
-            File outputFile = new File(path + "/out" + (i + 1) + ".txt");
+        // 从所有out(i + 1).txt中读取字节数组
+        for (File outputFile : outputFilePaths) {
             if (outputFile.exists()) {
-                // 使用Files.readAllLines读取文件内容
-                List<String> lines = Files.readAllLines(outputFile.toPath(), StandardCharsets.UTF_8);
-                // 将文件内容拼接为一个字符串
-                result[i] = String.join("\n", lines); // 修复了这里
+                // 使用Files.readAllBytes读取文件内容为字节数组
+                byte[] fileContent = Files.readAllBytes(outputFile.toPath());
+                System.out.println(new String(fileContent));
+                result.add(fileContent);
             } else {
-                throw new Exception("Output file " + outputFile.getAbsolutePath() + " does not exist.");
+                throw new IOException("Output file " + outputFile.getAbsolutePath() + " does not exist.");
             }
         }
 
-        // 删除临时目录
-        deleteDirectory(path);
         return result;
     }
+
     private void deleteDirectory(String directoryPath) throws IOException {
         File directory = new File(directoryPath);
         if (directory.exists()) {
